# battlyinstaller

./: .gitignore  EULA_de.md  EULA_en.md  EULA_es.md  EULA_fr.md  EULA_pt.md  README.md  build-store-installer.js  build.bat  build.ps1  package-lock.json  package.json
src/: ads.ejs  bridge.js  eula.ejs  footer.ejs  header.ejs  index.ejs  index.html  index.js  install-options.ejs  language.ejs  logs.ejs  main.js  path.ejs  preload.js  renderer.js  uninstaller.ejs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/css/: index.css
src/assets/js/: extract-worker.js  index-en.js  index.js  main.js  uninstall.js
src/assets/js/langs/: de.js  en.js  es.js  fr.js  it.js  pt.js
src/assets/langs/de/: eula.txt
src/assets/langs/en/: eula.txt
src/assets/langs/es/: eula.txt
src/assets/langs/fr/: eula.txt
src/assets/langs/it/: eula.txt
src/assets/langs/pt/: eula.txt
src/locales/: de.json  en.json  es.json  fr.json  pt.json
src/renderer/: index.html  renderer.js  styles.css
src/scripts/: github-api.js  install.js  uninstaller-builder.js
src/scripts/partners/: opera.js
src/scripts/utils/: win.js
store-installer/: index.js
