[package]
name = "battly-installer"
version = "2.0.0"
description = "Instalador oficial de Battly Launcher"
authors = ["TECNO BROS"]
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "=1.4.0", features = [] }

[dependencies]
tauri = { version = "=1.4.0", features = ["api-all", "custom-protocol"] }
tauri-utils = "=1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.50"
dirs = "5.0"
reqwest = { version = "=0.11.22", default-features = false, features = ["json", "blocking", "native-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
zip = "=0.6.6"
walkdir = "2"
open = "5"
sysinfo = "=0.29.10"
is_elevated = "0.1"
base64ct = "=1.6.0"
image = "=0.24.7"
tree_magic_mini = "=3.0.3"
globset = "=0.4.15"
# ignore = "=0.4.20"

[dependencies.windows-sys]
version = "0.48"
features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"]
